added service standards article

--- a/publications.html
+++ b/publications.html
@@ -46,6 +46,15 @@ keywords:
           <p>
             How the growth of municipal utilities from the early 20th Century provides lessons for the development digital government
           </p>
+        </li>  
+        <li>
+          <span class="label live">Complete</span>
+          <h3>
+            <a href="https://medium.com/platform-land/digital-service-standards-and-platforms-c11e060cacd">Digital service standards and platforms</a>
+           </h3>
+          <p>
+            A review of what digital services standards from different governments have to say about common platforms and APIs
+          </p>
         </li>
      </ul>
      <h2>Interviews</h2>
