--- a/definitions/definition-of-gaap.html
+++ b/definitions/definition-of-gaap.html
@@ -7,9 +7,32 @@ keywords:
 <div class="grid-container">
   <section role="main" class="grid-x">
     <div class="medium-10 large-8 cell">
-      <h1>A definition of Government as a Platform</h1>
+      <h1>Definitions</h1>
+      <h2>A working definition of Government as a Platform</h2>
+       
       <p class="lead">
-      Reorganising the work of government around a network of shared APIs, open-standards and canonical datasets, so that public servants, businesses and others can deliver radically better services to the public, more safely, efficiently and accountably
+      Reorganizing the work of government around a network of shared APIs and components, open-standards and canonical datasets, so that public servants, businesses and others can deliver radically better services to the public, more safely, efficiently and accountably.
+      </p>
+      <h2>The government as a platform stack</h2>
+      <h3>Services</h3>
+      <p>
+        Public-facing services allow citizens or their representatives to achieve a desired outcome. With appropriate governance, services can be provided by any layer of government, and by commercial or third sector organizations. 
+      </p>
+      <h3>Shared APIs</h3>
+      <p>
+        Shared APIs expose the business logic of government – for example calculating a benefit payment or checking the status of an application. The APIs developed by the United States Department of Veterans Affairs provides a good example of this, as does Open311, which defines a standard API for civic issue tracking – things like broken streetlights or potholes – and is in use in many cities.
+      </p>
+      <h3>Shared components</h3>
+      <p>
+        Shared components, such as those developed by the UK, US, India and Italy, solve common problems for the whole of government (and potentially beyond). For example: sending a text message, hosting a web application, taking a payment or signing a document.
+      </p>
+      <h3>Trust and identity</h3>
+      <p>
+        Trust and identity systems ensure that data is only accessed for appropriate purposes, and that use is understandable and trusted by citizens or their representatives.
+      </p>
+      <h3>Registers</h3>
+      <p>
+        Registers are canonical datasets that are used and trusted across government and beyond. They expose the data via APIs to agreed standards and have appropriate governance and ownership in place.
       </p>
     </div>
   </section>
