--- a/resources/index.html
+++ b/resources/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Data
+title: Resources
 description: 
 keywords: 
 ---
@@ -10,7 +10,7 @@ keywords:
       <h1>Resources</h1>
       <ul class="no-bullet work">
         <li>
-          <span class="label live">Live</span>
+          <span class="label live">Complete</span>
           <h3>
             <a href="reading-lists">Reading lists</a>
            </h3>
@@ -19,7 +19,7 @@ keywords:
           </p>
         </li>
         <li>
-          <span class="label live">Live</span>
+          <span class="label live">Complete</span>
           <h3>
             <a href="/resources/standards-search">Search global service standards</a>
            </h3>        
@@ -27,7 +27,16 @@ keywords:
             A custom Google Search Engine that searches the different service standards listed in the register of service standards
           </p>
         </li>
- 
+         <li>
+          <span class="label live">Complete</span>
+          <h3>
+            <a href="/resources/digital-service-unit-blogs.opml"Digital service unit blogs
+           </h3>
+          <p>
+            An OPML file of blogs of digital service units from around the world. Import the file into an RSS reader.
+          </p>
+        </li>
+
         <li>
           <span class="label future">Future</span>
           <h3>
@@ -51,15 +60,6 @@ keywords:
           <h3>
             Case study: USA
           </h3>
-        </li>
-        <li>
-          <span class="label future">future</span>
-          <h3>
-            Government as a Platform RSS feeds
-           </h3>
-          <p>
-            An OMPL file of blogs that are publishing on the subject of government as a platform
-          </p>
         </li>
        <li>
           <span class="label future">Future</span>
