--- a/resources/index.html
+++ b/resources/index.html
@@ -30,7 +30,7 @@ keywords:
          <li>
           <span class="label live">Complete</span>
           <h3>
-            <a href="/resources/digital-service-unit-blogs.opml"Digital service unit blogs
+            <a href="/resources/digital-service-unit-blogs.opml">Digital service unit blogs</a>
            </h3>
           <p>
             An OPML file of blogs of digital service units from around the world. Import the file into an RSS reader.
