--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ keywords: government
   <section role="main" class="grid-x grid-padding-x">
        <div class="large-8 cell">
         <p class="lead">
-          The Platform Government Initiative is a research project at digitalHKS examining how digital platforms will change government and society.
+        A project at <a href="https://www.belfercenter.org/project/digital-hks">digitalHKS</a> examining how digital platforms will change government and society.
          </p>
-         <h3>Aims of the initiative</h3>
+         <h3>Aims of the project</h3>
           <ol>
             <li>
                 Give <a href="https://medium.com/digitalhks/the-end-of-the-beginning-of-digital-service-units-cf1fcce8aa57">digital service units</a> resources to help them build good platforms
