--- a/index.html
+++ b/index.html
@@ -46,8 +46,16 @@ keywords: government
             <li>
               Publishing a biweekly newsletter on government platforms to keep practitioners, researchers and policy makers informed 
             </li>
+          </ol>
+          <h3>Project updates</h3>
+          <ul>
+            <li>
+              <a href="https://link.medium.com/BEWuFYtgQX">April 2019</a>
+            </li>
+            <li>
+              <a href="https://link.medium.com/ngFUMLzgQX">October 2018</a>
+            </li>
           </ul>
-
        </div>
       <div class="large-4 cell">
          <img src="/images/stack.png" alt="" style="padding:20px"/>
