--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Platform Government Initiative
+title: Home
 description: Open resources for anyone who wants to understand how digital platforms will change government and society
 keywords: government
 ---
