--- a/publications.html
+++ b/publications.html
@@ -34,15 +34,7 @@ keywords:
       <h2>Interviews</h2>
      <ul class="work no-bullet">
         <li>
-          <span class="label live">Complete</span>
-          <h3>
-            <a href="/resources/society.pdf">Poster: Platforms for government or platforms for society?</a>
-          </h3>
-            <p>
-              Visualizing the choice countries have made about who can use platforms
-            </p>
-        </li>
-
+          <span class="label in-progress">In progress</span>
           <h3>
             <a href="https://medium.com/platform-land/interview-with-will-myddelton-government-as-a-platform-3aff4ebcb3e8">Interview with Will Myddelton – UK Government as a Platform programme</a>
            </h3>
