--- a/publications.html
+++ b/publications.html
@@ -14,7 +14,7 @@ keywords:
         <li>
           <span class="label in-progress">In progress</span>
           <h3>
-            <a href="https://platformland.github.io/playbook/book/text/index.html">Government platforms playbook</a>
+            <a href="https://platformland.github.io/playbook/book/text/index.html">Government as a Platform: a playbook</a>
            </h3>
           <p>
             A practitioners manual for teams designing and operating government platforms
@@ -23,7 +23,7 @@ keywords:
         <li>
           <span class="label in-progress">In progress</span>
           <h3>
-            <a href="https://medium.com/platform-land/government-as-a-platform-the-hard-problems-part-1-introduction-b57269bcdc6f">Government as a Platform, the hard problems</a>
+            <a href="https://medium.com/platform-land/government-as-a-platform-the-hard-problems-part-1-introduction-b57269bcdc6f">Government as a Platform: the hard problems</a>
            </h3>
           <p>
             A review of some of the emerging political, ethical, governance and technical challenges of Government as a Platform
