--- a/publications.html
+++ b/publications.html
@@ -12,7 +12,7 @@ keywords:
       <h2>e-books</h2>
       <ul class="no-bullet work">
         <li>
-          <span class="label in-progress">In progress</span>
+          <span class="label live">Live</span>
           <h3>
             <a href="https://platformland.github.io/playbook/book/text/index.html">Government as a Platform: a playbook</a>
            </h3>
@@ -34,7 +34,7 @@ keywords:
       <h2>Interviews</h2>
      <ul class="work no-bullet">
         <li>
-          <span class="label in-progress">In progress</span>
+          <span class="label live">Complete</span>
           <h3>
             <a href="https://medium.com/platform-land/interview-with-will-myddelton-government-as-a-platform-3aff4ebcb3e8">Interview with Will Myddelton – UK Government as a Platform programme</a>
            </h3>
