--- a/publications.html
+++ b/publications.html
@@ -46,7 +46,7 @@ keywords:
       <h2>Articles</h2>
       <ul class="work no-bullet">
         <li>
-          <span class="label in-progress">In progress</span>
+          <span class="label live">Complete</span>
           <h3>
             A working definition of Government as a Platform
            </h3>
