--- a/publications.html
+++ b/publications.html
@@ -29,7 +29,7 @@ keywords:
             A review of some of the emerging political, ethical, governance and technical challenges of Government as a Platform
           </p>
         </li>
-
+        
       </ul>
       <h2>Interviews</h2>
      <ul class="work no-bullet">
@@ -118,6 +118,16 @@ keywords:
             One of the characteristics of today’s digital services is that they operate in real-time. Today, the infrastructure and the data-hygiene does not exist for government to systematically operate in real-time.
           </p>
         </li>
+        <li>
+          <span class="label live">Complete</span>
+          <h3>
+            <a href="https://medium.com/p/87b3ef0b67d8">Platforms for government? Platforms for society?</a>
+          </h3>
+          <p>
+            Broadly speaking, government platforms can have one of three usage footprints.
+          </p>
+        </li>
+
         <li>
           <span class="label live">Complete</span>
           <h3>
